--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -25,4 +25,6 @@ dependencies {
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:30.0-jre'
+    
+    implementation group: 'com.opencsv', name: 'opencsv', version: '4.0'
 }
